@@ -1,6 +1,12 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
-(2008-01-27)
+(2008-01-29)
+ * If a version is not recognized, assume it's an old version instead of new.
+   This way at least the file will play.
+ * Now smplayer should recognize the mplayer version from ubuntu packages
+   (MPlayer 2:1.0~rc1-0ubuntu13.1 (C) 2000-2006 MPlayer Team).
+
+(2008-01-28)
  * Now the user can tell smplayer what version of mplayer is using, with the
    config option mplayer_forced_version. Anyway in the future there'll be
    a dialog to configure this.
